--- a/package.json
+++ b/package.json
@@ -19,15 +19,16 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1",
-    "pg-hstore": "^2.3.3"
+    "pg-hstore": "^2.3.3",
+      "sequelize": "^6.3.5",
+    "sequelize-cli": "^6.2.0",
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.15.2",
     "@typescript-eslint/parser": "^4.15.2",
     "eslint": "^7.20.0",
     "nodemon": "^2.0.7",
-    "sequelize": "^6.3.5",
-    "sequelize-cli": "^6.2.0",
+    
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.2"
   }
